<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <GridView
        android:id="@+id/favorite_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:horizontalSpacing="4dp"        
        android:numColumns="3"
        android:verticalSpacing="8dp"
        android:layout_above="@+id/adView" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/img_no"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:adSize="BANNER"
        android:visibility="@string/admob_visibility"
        ads:adUnitId="@string/admob_publisher_id" />

</RelativeLayout>