<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/googleDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/navigationHeader"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:background="@drawable/nav_drawer_header_image"
        android:paddingTop="24dp" >

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/nav_drawer_icon"
            android:visibility="@string/drawer_info_visibility" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imgIcon"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:visibility="@string/drawer_info_visibility" >

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/app_email"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/drawerList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navigationHeader"
        android:background="@color/myDrawerBackground"
        android:clickable="true"
        android:scrollbars="vertical" />

</RelativeLayout>